# ai-share

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  AI_GUIDELINES.md  GIT_COMMIT_GUIDELINES.md  README.md  eslint.config.js  opencode.jsonc  package.json  tsconfig.json
.opencode/: oh-my-openagent.jsonc
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/plans/: ai-share-strategic-roadmap.md
config/: AGENTS.md  agents.yaml  global.yaml  models.yaml  profiles.yaml  provider.yaml  routing.yaml
docs/protocol/: tri-role.md
docs/schema/: agents.md  global.md  models.md  profiles.md  provider.md
memory/architecture/: agent-patterns.md  ai-desktop.md  coding-philosophy.md  distillation.md
memory/policies/: memory-policy.yaml
memory/profiles/: coding.yaml  infra.yaml  research.yaml
memory/stable/: devices.yaml  user.yaml  workflows.yaml
memory/stack/: models.md  oh-my-openagent.md  opencode.md  wsl.md
memory/user/: devices.md  devices.yaml  models.yaml  preferences.md  profile.md  profile.yaml  prompts.md  toolchain.md  workflow.md  workflows.yaml
plugins/: AGENTS.md
plugins/dingtalk-notifier/: ai-share-plugin.json  (+3 more)
plugins/live2d-pet/src-tauri/: Cargo.toml  tauri.conf.json
plugins/live2d-pet/src-tauri/capabilities/: default.json
plugins/live2d-pet/src-tauri/src/: main.rs
schema/: profiles.schema.json
scripts/: run-bun.mjs  run-bunx.mjs
src/: AGENTS.md  check-ai.ts  config-builders.ts  generate-user-config.test.ts  generate-user-config.ts  index.ts  jsonc.ts  loader.ts  schema-update.ts  share.ts  types.ts  yaml.test.ts  yaml.ts
(+107 files in other folders)
