[package]
name = "live2d-pet"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.11"
